Got reveal to work with play route

--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,11 @@
         <meta charset="utf-8">
         <title>Yeoman Ember Starter Kit</title>
 
+        <!-- build:css styles/libs.css -->
+        <link rel="stylesheet" href="bower_components/reveal.js/css/reveal.css">
+        <link rel="stylesheet" href="bower_components/reveal.js/css/theme/solarized.css" id="theme">
+        <!-- endbuild -->
+
         <!-- build:css styles/main.css -->
         <link rel="stylesheet" href="styles/style.css">
         <!-- endbuild -->
@@ -14,6 +19,7 @@
         <script src="bower_components/handlebars/handlebars.runtime.js"></script>
         <script src="bower_components/ember/ember.js"></script>
         <script src="bower_components/ember-data-shim/ember-data.js"></script>
+        <script src="bower_components/reveal.js/js/reveal.js"></script>
         <!-- endbuild -->
 
         <!-- build:js(.tmp) scripts/templates.js -->
