--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
 
         <!-- build:css styles/libs.css -->
         <link rel="stylesheet" href="bower_components/reveal.js/css/reveal.css">
-        <link rel="stylesheet" href="bower_components/reveal.js/css/theme/solarized.css" id="theme">
+        <link rel="stylesheet" href="bower_components/reveal.js/css/theme/simple.css" id="theme">
         <!-- endbuild -->
 
         <!-- build:css styles/main.css -->
